--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<meta http-equiv="content-type" content="text/html; charset=utf-8" />
 	<meta name="description" content="March 2017" />
 	
-	<!-- Start WOWSlider.com HEAD section --> <!-- add to the <head> of your page -->
+	<!-- Start WOWSlider.com HEAD section -->
 	<link rel="stylesheet" type="text/css" href="engine1/style.css" />
 	<script type="text/javascript" src="engine1/jquery.js"></script>
 	<!-- End WOWSlider.com HEAD section -->
