--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 	<!-- End WOWSlider.com HEAD section -->
 
 </head>
-<body style="background-color:#D3D3D3;margin:auto">
+<body style="background-color:#FFFFFF;margin:auto">
 	
 	<!-- Start WOWSlider.com BODY section --> <!-- add to the <body> of your page -->
 	<div id="wowslider-container1">
