--- a/wowslider.html
+++ b/wowslider.html
@@ -16,16 +16,16 @@
 	<!-- Start WOWSlider.com BODY section --> <!-- add to the <body> of your page -->
 	<div id="wowslider-container1">
 	<div class="ws_images"><ul>
-		<li><img src="data1/images/ek365banner.jpg" alt="EK365-Banner" title="EK365-Banner" id="wows1_0"/></li>
-		<li><a href=" 	https://store.extremehockey.net/departments/ribcor-skates-105.html" target="_top"><img src="data1/images/2017ccm_sk70k.jpg" alt="2017CCM_SK70K" title="2017CCM_SK70K" id="wows1_1"/></a></li>
-		<li><a href=" 	https://store.extremehockey.net/departments/supreme-sticks-110.html" target="_top"><img src="data1/images/supreme_launch_1366x768.jpg" alt="Supreme_Launch_1366x768" title="Supreme_Launch_1366x768" id="wows1_2"/></a></li>
-		<li><a href=" 	https://store.extremehockey.net/departments/warrior-sticks-122.html" target="_top"><img src="data1/images/qrl_071316.jpg" alt="QRL_07-13-16" title="QRL_07-13-16" id="wows1_3"/></a></li>
+		<li><a href="https://store.extremehockey.net/departments/ribcor-sticks-107.html" target="_top"><img src="data1/images/2017ccm_trigger2hs_sec.jpg" alt="2017CCM_Trigger2HS_SEC" title="2017CCM_Trigger2HS_SEC" id="wows1_0"/></a></li>
+		<li><a href=" 	https://store.extremehockey.net/departments/sherwood-ek-sticks-123.html" target="_top"><img src="data1/images/ek365banner.jpg" alt="EK365-Banner" title="EK365-Banner" id="wows1_1"/></a></li>
+		<li><a href=" 	https://store.extremehockey.net/departments/warrior-sticks-122.html" target="_top"><img src="data1/images/qrl_071316.jpg" alt="QRL_07-13-16" title="QRL_07-13-16" id="wows1_2"/></a></li>
+		<li><a href=" 	https://store.extremehockey.net/departments/supreme-sticks-110.html" target="_top"><img src="data1/images/supreme_launch_1366x768.jpg" alt="Supreme_Launch_1366x768" title="Supreme_Launch_1366x768" id="wows1_3"/></a></li>
 	</ul></div>
 	<div class="ws_bullets"><div>
-		<a href="#" title="EK365-Banner"><span><img src="data1/tooltips/ek365banner.jpg" alt="EK365-Banner"/>1</span></a>
-		<a href="#" title="2017CCM_SK70K"><span><img src="data1/tooltips/2017ccm_sk70k.jpg" alt="2017CCM_SK70K"/>2</span></a>
-		<a href="#" title="Supreme_Launch_1366x768"><span><img src="data1/tooltips/supreme_launch_1366x768.jpg" alt="Supreme_Launch_1366x768"/>3</span></a>
-		<a href="#" title="QRL_07-13-16"><span><img src="data1/tooltips/qrl_071316.jpg" alt="QRL_07-13-16"/>4</span></a>
+		<a href="#" title="2017CCM_Trigger2HS_SEC"><span><img src="data1/tooltips/2017ccm_trigger2hs_sec.jpg" alt="2017CCM_Trigger2HS_SEC"/>1</span></a>
+		<a href="#" title="EK365-Banner"><span><img src="data1/tooltips/ek365banner.jpg" alt="EK365-Banner"/>2</span></a>
+		<a href="#" title="QRL_07-13-16"><span><img src="data1/tooltips/qrl_071316.jpg" alt="QRL_07-13-16"/>3</span></a>
+		<a href="#" title="Supreme_Launch_1366x768"><span><img src="data1/tooltips/supreme_launch_1366x768.jpg" alt="Supreme_Launch_1366x768"/>4</span></a>
 	</div></div>
 	<div class="ws_shadow"></div>
 	</div>	
