--- a/index.html
+++ b/index.html
@@ -3,33 +3,33 @@
 <head>
 	<title>Slider</title>
 	<meta http-equiv="content-type" content="text/html; charset=utf-8" />
-	<meta name="description" content="Slider" />
+	<meta name="description" content="March 2017" />
 	
-	<!-- Start WOWSlider.com HEAD section -->
+	<!-- Start WOWSlider.com HEAD section --> <!-- add to the <head> of your page -->
 	<link rel="stylesheet" type="text/css" href="engine1/style.css" />
 	<script type="text/javascript" src="engine1/jquery.js"></script>
 	<!-- End WOWSlider.com HEAD section -->
 
 </head>
-<body style="background-color:#FFFFFF;margin:auto">
+<body style="background-color:#D3D3D3;margin:auto">
 	
-	<!-- Start WOWSlider.com BODY section -->
-<div id="wowslider-container1">
-<div class="ws_images"><ul>
-		<li><a href="https://store.extremehockey.net/departments/tack-skates-125.html" target="_top"><img src="data1/images/as1skates.jpg" alt="AS1-Skates" title="AS1-Skates" id="wows1_0"/></a></li>
-		<li><a href="https://store.extremehockey.net/pages/Sale.html" target="_top"><img src="data1/images/ballsavings.jpg" alt="Ball-Savings" title="Ball-Savings" id="wows1_1"/></a></li>
-		<li><a href="https://store.extremehockey.net/departments/vapor-sticks-117.html" target="_top"><img src="data1/images/bauervapor1xlite.jpg" alt="BAUER-Vapor1XLite" title="BAUER-Vapor1XLite" id="wows1_2"/></a></li>
+	<!-- Start WOWSlider.com BODY section --> <!-- add to the <body> of your page -->
+	<div id="wowslider-container1">
+	<div class="ws_images"><ul>
+		<li><a href="https://store.extremehockey.net/departments/tacks-sticks-116.html" target="_top"><img src="data1/images/supertacksas1sticks.jpg" alt="SuperTacksAS1-Sticks" title="SuperTacksAS1-Sticks" id="wows1_0"/></a></li>
+		<li><a href="https://store.extremehockey.net/products/bauer-re-akt-95-hockey-helmet-3231.html" target="_top"><img src="data1/images/bauer_reakt95.jpg" alt="BAUER_REAKT-95" title="BAUER_REAKT-95" id="wows1_1"/></a></li>
+		<li><a href="https://store.extremehockey.net/departments/tack-skates-125.html" target="_top"><img src="data1/images/as1skates.jpg" alt="AS1-Skates" title="AS1-Skates" id="wows1_2"/></a></li>
 	</ul></div>
 	<div class="ws_bullets"><div>
-		<a href="#" title="AS1-Skates"><span><img src="data1/tooltips/as1skates.jpg" alt="AS1-Skates"/>1</span></a>
-		<a href="#" title="Ball-Savings"><span><img src="data1/tooltips/ballsavings.jpg" alt="Ball-Savings"/>2</span></a>
-		<a href="#" title="BAUER-Vapor1XLite"><span><img src="data1/tooltips/bauervapor1xlite.jpg" alt="BAUER-Vapor1XLite"/>3</span></a>
+		<a href="#" title="SuperTacksAS1-Sticks"><span><img src="data1/tooltips/supertacksas1sticks.jpg" alt="SuperTacksAS1-Sticks"/>1</span></a>
+		<a href="#" title="BAUER_REAKT-95"><span><img src="data1/tooltips/bauer_reakt95.jpg" alt="BAUER_REAKT-95"/>2</span></a>
+		<a href="#" title="AS1-Skates"><span><img src="data1/tooltips/as1skates.jpg" alt="AS1-Skates"/>3</span></a>
 	</div></div>
-<div class="ws_shadow"></div>
-</div>	
-<script type="text/javascript" src="engine1/wowslider.js"></script>
-<script type="text/javascript" src="engine1/script.js"></script>
-<!-- End WOWSlider.com BODY section -->
+	<div class="ws_shadow"></div>
+	</div>	
+	<script type="text/javascript" src="engine1/wowslider.js"></script>
+	<script type="text/javascript" src="engine1/script.js"></script>
+	<!-- End WOWSlider.com BODY section -->
 
 </body>
 </html>
